--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_deps = 
+	finitespace/BME280@^3.0.0
+	olikraus/U8glib@^1.19.1
