--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,7 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_deps = 
+	Wire
+	SPI
 	finitespace/BME280@^3.0.0
 	olikraus/U8glib@^1.19.1
